--- a/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
+++ b/src/FrontendAccountManagement.Core/FrontendAccountManagement.Core.csproj
@@ -9,9 +9,11 @@
   <ItemGroup>
     <PackageReference Include="EPR.Common.Authorization" Version="1.0.21" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.44" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
 	<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+	<PackageReference Include="System.Text.Json" Version="9.0.9" />
     <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
     <PackageReference Update="SonarAnalyzer.CSharp" Version="9.32.0.97167" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.1.0" />
