--- a/src/FrontendAccountManagement.IntegrationTests/FrontendAccountManagement.IntegrationTests.csproj
+++ b/src/FrontendAccountManagement.IntegrationTests/FrontendAccountManagement.IntegrationTests.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.9" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
         <PackageReference Include="MSTest.TestAdapter" Version="3.5.2" />
         <PackageReference Include="MSTest.TestFramework" Version="3.5.2" />
@@ -22,6 +23,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="System.Text.Json" Version="9.0.9" />
         <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
         <PackageReference Update="SonarAnalyzer.CSharp" Version="9.32.0.97167" />
     </ItemGroup>
