--- a/src/FrontendAccountManagement.Web.UnitTests/FrontendAccountManagement.Web.UnitTests.csproj
+++ b/src/FrontendAccountManagement.Web.UnitTests/FrontendAccountManagement.Web.UnitTests.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="AutoFixture" Version="4.18.1" />
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="ILogger.Moq" Version="1.1.10" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.9" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
         <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="MSTest.TestAdapter" Version="3.5.2" />
@@ -29,6 +30,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
+        <PackageReference Include="System.Text.Json" Version="9.0.9" />
         <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
         <ProjectReference Include="..\FrontendAccountManagement.Core\FrontendAccountManagement.Core.csproj" />
         <ProjectReference Include="..\FrontendAccountManagement.Web\FrontendAccountManagement.Web.csproj" />
