--- a/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
+++ b/src/FrontendAccountManagement.Web/FrontendAccountManagement.Web.csproj
@@ -26,11 +26,13 @@
       <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.8" />
       <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="8.0.8" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.8" />
+      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.9" />
       <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
       <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="3.5.0" />
       <PackageReference Include="Microsoft.Graph" Version="5.85.0" />
       <PackageReference Include="Microsoft.Identity.Web" Version="3.1.0" />
       <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.1.0" />
+      <PackageReference Include="System.Text.Json" Version="9.0.9" />
       <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
       <PackageReference Update="SonarAnalyzer.CSharp" Version="9.30.0.95878" />
       <PackageReference Include="EPR.Common.Authorization" Version="1.0.21" />
